Update fixes